Bug 206105 - WTR::TestController::decidePolicyForPluginLoad() should output bundle identifier on release assert
Summary: WTR::TestController::decidePolicyForPluginLoad() should output bundle identif...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Plug-ins (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: David Kilzer (:ddkilzer)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-01-10 15:39 PST by David Kilzer (:ddkilzer)
Modified: 2020-01-13 17:08 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (1.75 KB, patch)
2020-01-10 15:43 PST, David Kilzer (:ddkilzer)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Kilzer (:ddkilzer) 2020-01-10 15:39:21 PST
WTR::TestController::decidePolicyForPluginLoad() should output bundle identifier on release assert.

This makes it easier to determine which installed plugin is causing this test to fail:

imported/w3c/web-platform-tests/content-security-policy/plugin-types/plugintypes-nourl-allowed.html
Comment 1 Alexey Proskuryakov 2020-01-10 15:42:49 PST
Usually I was able to tell from test source. This one contains "application/x-shockwave-flash".
Comment 2 David Kilzer (:ddkilzer) 2020-01-10 15:43:10 PST
Created attachment 387386 [details]
Patch v1
Comment 3 Radar WebKit Bug Importer 2020-01-10 15:43:24 PST
<rdar://problem/58493937>
Comment 4 David Kilzer (:ddkilzer) 2020-01-10 15:45:16 PST
(In reply to Alexey Proskuryakov from comment #1)
> Usually I was able to tell from test source. This one contains
> "application/x-shockwave-flash".

Okay, that's wasn't obvious to me from the comment in the source.
Comment 5 David Kilzer (:ddkilzer) 2020-01-10 16:24:25 PST
(In reply to David Kilzer (:ddkilzer) from comment #4)
> (In reply to Alexey Proskuryakov from comment #1)
> > Usually I was able to tell from test source. This one contains
> > "application/x-shockwave-flash".
> 
> Okay, that's wasn't obvious to me from the comment in the source.

"source" here refers to the C++ source in Tools/WebKitTestRunner/TestController.cpp.
Comment 6 Brent Fulgham 2020-01-13 11:38:42 PST
Comment on attachment 387386 [details]
Patch v1

Oh heck yes! r=me.
Comment 7 David Kilzer (:ddkilzer) 2020-01-13 12:21:03 PST
The ios-wk2 test failure appears to be unrelated.
Comment 8 WebKit Commit Bot 2020-01-13 17:08:25 PST
The commit-queue encountered the following flaky tests while processing attachment 387386 [details]:

editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org)
The commit-queue is continuing to process your patch.
Comment 9 WebKit Commit Bot 2020-01-13 17:08:53 PST
Comment on attachment 387386 [details]
Patch v1

Clearing flags on attachment: 387386

Committed r254473: <https://trac.webkit.org/changeset/254473>
Comment 10 WebKit Commit Bot 2020-01-13 17:08:54 PST
All reviewed patches have been landed.  Closing bug.