WTR::TestController::decidePolicyForPluginLoad() should output bundle identifier on release assert <https://webkit.org/b/206105>

Reviewed by Brent Fulgham.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::decidePolicyForPluginLoad): Change
RELEASE_ASSERT_NOT_REACHED() to
RELEASE_ASSERT_NOT_REACHED_WITH_MESSAGE() with bundle
identifier.


Canonical link: https://commits.webkit.org/219293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254473 268f45cc-cd09-0410-ab3c-d52691b4dbfc